--- a/i3blocks/config
+++ b/i3blocks/config
@@ -1,109 +1,49 @@
-#[cmus]
-#label=♪
-#command=~/.local/bin/i3blocks/cmus
-#interval=5
-#signal=10
+[WEATHER_SIGNALER]
+command=~/.config/i3blocks/weather/weather_signaler
+interval=once
 
-[mpd]
-label=♪ 
-command=~/.local/bin/i3blocks/mpd
-interval=1
-signal=10
-
-[email]
-label=
-command=~/.local/bin/i3blocks/email
-instance=0x2a
-interval=60
-
-#[rss]
-#label=
-#command=~/.local/bin/i3blocks/feed
+#[WEATHER]
+#command=~/.config/i3blocks/script/weather
 #interval=300
-
-[volume-pulseaudio]
-# When using PipeWire
-command=~/.local/bin/i3blocks/volume-pipewire
-# When using PulseAudio
-#command=~/.local/bin/i3blocks/volume-pulseaudio
-interval=10
-signal=10
-
-[brightness]
-#https://github.com/haikarainen/light, https://archlinux.org/packages/community/x86_64/light/
-label=
-command=echo " $(light -G | cut -d'.' -f 1)"
-color=#a3a3a3
-interval=2
-signal=10
-
-[cpu_usage2]
-command=~/.local/bin/i3blocks/cpu_usage2
-markup=pango
-interval=persist
-
-[memory]
-command=~/.local/bin/i3blocks/memory
-interval=3
-
-[bandwidth3]
-command=~/.local/bin/i3blocks/bandwidth2/bandwidth2
-interval=persist
-markup=pango
-
-#[user]
-#command=echo "$(whoami)@$(hostname)"
-#interval=once
-#color=#00D603
-
-[trash]
-command=~/.local/bin/i3blocks/trash
-interval=10
-
-#[pacman-updates]
-#command=~/.local/bin/i3blocks/arch-update --aur --quiet
-#markup=pango
-# Call `pkill -SIGRTMIN+12 i3blocks` to refresh it
-#interval=once
-#signal=12
-#LABEL=
-
-[battery2]
-command=~/.local/bin/i3blocks/battery2 1
-markup=pango
-interval=30
-
-[calendar]
-command=~/.local/bin/i3blocks/rofi-calendar
-interval=1
-DATEFMT=+%a, %d. %B %Y %H:%M
-SHORTFMT=+%H:%M
-HEIGHT=180
-WIDTH=220
+#color=#FEC925
+#signal=2
 
 [weather]
 command=wget -qO - "https://wttr.in/?format=4" | awk -F ': ' '{print $2}'
 interval=1800
 
-#[keyboard]
-#command=~/.local/bin/i3blocks/keyboard
-#label= 
-#interval=once
+[DISK]
+command=df -h / | awk '/\//{ printf("  :%4s/%s \n", $4, $2) }'
+interval=2
 
-[network]
-command=~/.local/bin/i3blocks/network.sh
-interval=10
-signal=11
+[BATTERY]
+command=~/.config/i3blocks/battery/battery_info.sh
+interval=3
 
-#[internet]
-#command=~/.local/bin/i3blocks/internet.sh
-#interval=10
-#signal=11
+[CPU]
+full_text= CPU:  0.00% @ +00.0°C                 
+command=~/.config/i3blocks/cpu/cpu_info.sh
+interval=repeat
 
-#[shutdown_menu]
-#full_text= 
-#color=#FF0000
-# If you are using FontAwesome, we recommend the power-off icon:
-# http://fontawesome.io/icon/power-off/
-#command=~/.local/bin/i3blocks/shutdown_menu
+[MEM]
+command=free -h | awk '/Mem:/ { printf("   %5s/%s \n", $3, $2) }'
+interval=1
+
+[SOUND_BURST]
+command=~/.config/i3blocks/sound/sound_burst.sh
+interval=once
+
+[SOUND]
+full_text= 󰖁 0% 
+command=~/.config/i3blocks/sound/sound_info.sh
+interval=0
+signal=1
+
+[TIME_DATE]
+command=date +" %a / %H:%M:%S"
+interval=1
+
+[colorscheme-picker]
+command=$HOME/.config/i3blocks/script/$BLOCK_NAME -d $HOME/wallpapers
+full_text=  
 
