--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,5 +1,5 @@
 enable_audio_bell no
-font_family             Terminess Nerd Font
+font_family             Hack Nerd Font
 italic_font             auto
 bold_font               auto
 bold_italic_font        auto
@@ -9,66 +9,6 @@ bold_italic_font        auto
 font_size               13.0
 font_size_delta         2
 
-background_opacity 0.65
-confirm_os_window_close 0 
+background_opacity 0.7
 
-foreground            #f6f6f6
-background            #0C0C0C
-selection_foreground  #000000
-selection_background  #FFFACD
-url_color             #0087BD
-cursor                #f6f6f6
-color0 #0C0C0C
-color1 #909090
-color2 #A49D9E
-color3 #B0B0B0
-color4 #C5BBBC
-color5 #D1D0D0
-color6 #E9DBDC
-color7 #f6f6f6
-color8 #acacac
-color9 #909090
-color10 #A49D9E
-color11 #B0B0B0
-color12 #C5BBBC
-color13 #D1D0D0
-color14 #E9DBDC
-color15 #f6f6f6
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+include ~/.cache/wal/colors-kitty.conf
