--- a/i3blocks/config
+++ b/i3blocks/config
@@ -8,33 +8,32 @@ interval=once
 #color=#FEC925
 #signal=2
 
-[weather]
-command=wget -qO - "https://wttr.in/?format=4" | awk -F ': ' '{print $2}'
-interval=1800
+#[weather]
+#command=wget -qO - "https://wttr.in/?format=4" | awk -F ': ' '{print $2}'
+#interval=1800
 
-[DISK]
-command=df -h / | awk '/\//{ printf("  :%4s/%s \n", $4, $2) }'
-interval=2
+#[DISK]
+#command=df -h / | awk '/\//{ printf("  :%4s/%s \n", $4, $2) }'
+#interval=2
 
 [BATTERY]
 command=~/.config/i3blocks/battery/battery_info.sh
 interval=3
 
-[CPU]
-full_text= CPU:  0.00% @ +00.0°C                 
-command=~/.config/i3blocks/cpu/cpu_info.sh
-interval=repeat
+#[CPU]
+#full_text= CPU:  0.00% @ +00.0°C
+#command=~/.config/i3blocks/cpu/cpu_info.sh
+#interval=repeat
 
-[MEM]
-command=free -h | awk '/Mem:/ { printf("   %5s/%s \n", $3, $2) }'
-interval=1
+#[MEM]
+#command=free -h | awk '/Mem:/ { printf("   %5s/%s \n", $3, $2) }'
+#interval=1
 
 [SOUND_BURST]
 command=~/.config/i3blocks/sound/sound_burst.sh
 interval=once
 
 [SOUND]
-full_text= 󰖁 0% 
 command=~/.config/i3blocks/sound/sound_info.sh
 interval=0
 signal=1
@@ -45,5 +44,4 @@ interval=1
 
 [colorscheme-picker]
 command=$HOME/.config/i3blocks/script/$BLOCK_NAME -d $HOME/wallpapers
-full_text=  
-
+full_text= BG:
