--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,14 +1,19 @@
 enable_audio_bell no
-font_family             Hack Nerd Font
+font_family             Terminess Nerd Font
 italic_font             auto
 bold_font               auto
 bold_italic_font        auto
 
+# special
+foreground       #ffffff
+cursor           #ffffff
 
 # Font size
-font_size               13.0
+font_size               15.0
 font_size_delta         2
 
 background_opacity 0.7
 
 include ~/.cache/wal/colors-kitty.conf
+#include themes/gruvbox_dark_hard.conf
+#include themes/TokyoNight.conf
