--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,19 +1,36 @@
-enable_audio_bell no
-font_family             Terminess Nerd Font
-italic_font             auto
-bold_font               auto
-bold_italic_font        auto
-
-# special
-foreground       #ffffff
-cursor           #ffffff
-
-# Font size
-font_size               15.0
-font_size_delta         2
-
-background_opacity 0.7
-
 include ~/.cache/wal/colors-kitty.conf
-#include themes/gruvbox_dark_hard.conf
-#include themes/TokyoNight.conf
+#include ~/.config/kitty/themes/black_metal_gorgoroth.conf
+allow_remote_control yes
+
+map super+p launch --type=overlay kitty @ set-colors --all ~/.config/kitty/themes/black_metal_gorgoroth.conf
+map super+u           set_background_opacity 1
+map super+shift+u     set_background_opacity default
+map super+shift+i     set_background_opacity 0.9
+
+font_family Terminess Nerd Font
+#font_family Iosevka Nerd Font Mono
+font_size 16.0
+text_composition_strategy legacy
+modify_font cell_width 95%
+
+shell_integration no-cursor
+enable_audio_bell no
+
+dynamic_background_opacity yes
+hide_window_decorations yes
+window_padding_width 0
+window_padding_height 0
+# window_margin_width 22 0 0 0
+background_blur 10
+placement_strategy top
+
+cursor_trail 10
+cursor_trail_start_threshold 0
+shell_integration no-cursor
+cursor_trail_decay 0.01 0.15
+cursor_shape block
+cursor_blink true
+
+background_opacity 0.8
+set_background_opacity 1
+# background_opacity 1.0
