--- a/neofetch/config.conf
+++ b/neofetch/config.conf
@@ -2,39 +2,11 @@
 # Made by https://github.com/karmafake21
 
 print_info() {
-    info "" title
-    info underline
-    info " " distro
-    #info " " model
-    info " " kernel
-    #info " " uptime
-    #info " " packages
-    info " " shell
-    info " " term
-    info " " term_font
-    #info "Resolution" resolution
-    #info " " de
-    info "⊞ " wm
-    #info "WM Theme" wm_theme
-    info " " theme
-    #info "󰍮" icons
-    #info " " "Ryzen 5 3600"
-    #info " " gpu
-    #info "󰍛 " memory
-
-    # info "GPU Driver" gpu_driver  # Linux/macOS only
-    # info "CPU Usage" cpu_usage
-    # info "Disk" disk
-    # info "Battery" battery
-    # info "Font" font
-    # info "Song" song
-    # [[ "$player" ]] && prin "Music Player" "$player"
-    # info "Local IP" local_ip
-    # info "Public IP" public_ip
-    # info "Users" users
-    # info "Locale" locale  # This only works on glibc systems.
-
-    info cols
+    info "OS" distro
+    info "Kernel" kernel
+    info "WM" wm
+    info "Terminal" term
+    info "Shell" shell
 }
 
 
