just made it better

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -4,6 +4,9 @@ allow_remote_control yes
 
 map super+u launch --type=overlay kitty @ set-colors --all ~/.config/kitty/themes/black_metal_gorgoroth.conf
 
+background #000000
+background_opacity 1.0
+
 font_family Iosevka Nerd Font Mono
 font_size 16.0
 text_composition_strategy legacy
