--- a/i3/config
+++ b/i3/config
@@ -44,19 +44,19 @@ set_from_resource $inactive    i3wm.color4 #f0f0f0
 set_from_resource $error       i3wm.color5 #f0f0f0
 
 # i3bar configuration
-exec_always --no-startup-id ~/.config/polybar/launch.sh
+exec_always --no-startup-id bash -c "sleep 2 && ~/.config/polybar/launch.sh"
 #bar {
 #    status_command i3blocks
 #    separator_symbol "::"
 #    position top
 #    colors {
-#	separator		$text
-#	background		$background
-#	    statusline		$text
-#	focused_workspace	$text		$text		$background
-#	    active_workspace	$inactive	$inactive	$background
-#	    inactive_workspace	$background	$background	$text
-#	    urgent_workspace	$error		$error		$background
+#	 separator		    $text
+#	 background		    $background
+#	 statusline		    $text
+#	 focused_workspace	$text		$text		$background
+#	 active_workspace	$inactive	$inactive	$background
+#	 inactive_workspace	$background	$background	$text
+#	 urgent_workspace	$error		$error		$background
 #    }    
 #}
 
@@ -68,18 +68,18 @@ exec --no-startup-id clipit
 exec --no-startup-id xrdb -merge $HOME/.Xresources
 exec --no-startup-id feh --bg-center --restore
 exec --no-startup-id wal -i "$(< "${HOME}/.cache/wal/wal")"
-exec --no-startup-id nm-applet --restore  #NetworkManager Applet
+exec --no-startup-id nm-applet --restore  # NetworkManager Applet
 exec --no-startup-id xfce4-power-manager --restore # XfcePowerManager
 exec --no-startup-id kdeconnect-indicator --restore # KDE Connect
-exec --no-startup-id qbittorrent --restore #qBittorrent
-exec --no-startup-id /usr/lib/xfce4/notifyd/xfce4-notifyd # xfce4 notifications
+exec --no-startup-id qbittorrent --restore # qBittorrent
+exec --no-startup-id /usr/lib/xfce4/notifyd/xfce4-notifyd # Xfce4 notifications
 exec --no-startup-id  blueman-manager #Bluetooth manager
 exec --no-startup-id /usr/lib64/libexec/polkit-kde-authentication-agent-1 # Polkit Agent
-exec --no-startup-id copyq  #CopyQ
-exec telegram-desktop --restore
-exec --no-startup-id /usr/lib/xfce4/notifyd/xfce4-notifyd # xfce4 notifications
-exec --no-startup-id vesktop  #Discord
-exec --no-startup-id slack  #Slack
+exec --no-startup-id copyq  # CopyQ
+exec telegram-desktop --restore # Telegram 
+exec --no-startup-id /usr/lib/xfce4/notifyd/xfce4-notifyd # Xfce4 notifications
+exec --no-startup-id vesktop  # Discord
+exec --no-startup-id slack  # Slack
 exec --no-startup-id picom --backend glx --log-level DEBUG --config ~/.config/picom/picom.conf
 exec --no-startup-id autotiling -w 1 3 5 7 9
 # Disable touchpad
@@ -143,17 +143,17 @@ bindsym $mod+space focus mode_toggle
 bindsym $mod+a focus parent
 
 #Workspaces Variables
-set $ws1 "1: "
-set $ws2 "2: "
-set $ws3 "3: "
-set $ws4 "4: "
-set $ws5 "5:塞 "
-set $ws6 "6: "
-set $ws7 "7: "
-set $ws8 "8: "
-set $ws9 "9: "
-set $ws10 "10: "
-set $ws11 "11: "
+set $ws1 "[1]"
+set $ws2 "[2]"
+set $ws3 "[3]"
+set $ws4 "[4]"
+set $ws5 "[5]"
+set $ws6 "[6]"
+set $ws7 "[7]"
+set $ws8 "[8]"
+set $ws9 "[9]"
+set $ws10 "[10]"
+set $ws11 "[11]"
 
 # Switch to workspace
 bindsym $mod+1 workspace $ws1
