--- a/kitty/colors-kitty.conf
+++ b/kitty/colors-kitty.conf
@@ -1,15 +1,17 @@
+
 foreground         {foreground}
-background         {background}
 background_opacity {background.alpha_dec}
 cursor             {cursor}
+
+background #000000
 
 active_tab_foreground     {background}
 active_tab_background     {foreground}
 inactive_tab_foreground   {foreground}
-inactive_tab_background   {background}
+inactive_tab_background   #000000
 
 active_border_color   {foreground}
-inactive_border_color {background}
+inactive_border_color #000000
 bell_border_color     {color1}
 
 color0       {color0}
@@ -28,3 +30,4 @@ color6       {color6}
 color14      {color14}
 color7       {color7}
 color15      {color15}
+
