--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -9,16 +9,18 @@
 ; https://github.com/polybar/polybar
 ;==========================================================
 
+
 [colors]
-background = #000000
-background-alt = #161616
-foreground = #ffffff
-primary = #ffffff
-secondary = #8ABEB7
-alert = #A54242
-disabled = #707880
+background = #000000       
+background-alt = #121212   
+foreground = #c1c1c1       
+primary = #c1c1c1          
+secondary = #5f8787       
+alert = #A54242      
+disabled = #444444         
 
 [bar/example]
+monitor = ${env:MONITOR:}
 width = 100%
 height = 20pt
 radius = 0
@@ -35,14 +37,14 @@ padding-left = 2pt
 padding-right = 2pt
 module-margin = 1
 
-separator = " :: "
+separator = " | "
 separator-foreground = ${colors.disabled}
 
-font-0 = "Iosevka Nerd Font;2"
+font-0 = "Hack Nerd Font;2"
 
-modules-left = xworkspaces
+modules-left = xworkspaces xwindow
 modules-center = date
-modules-right = battery colorscheme-picker
+modules-right = battery pulseaudio colorscheme-picker
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -140,7 +142,7 @@ label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
 type = internal/date
 interval = 1
 date = %H:%M
-date-alt = %Y-%m-%d %H:%M:%S
+date-alt =%H:%M %m/%d 
 label = %date%
 label-foreground = ${colors.primary}
 
